# f1-analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01_drivers_vs_teammate.ipynb  02_notable_drivers_vs_teammate.ipynb  03_practice_vs_qualifying.ipynb
sql/: driver_vs_teammate_h2h.sql
src/f1_analysis/: f1db.py  fastf1_wrapper.py  util.py
