[project]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "FjellOverflow",email = "fjelloverflow@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{include = "f1_analysis", from = "src"}]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.0,<0.14.0)",
    "pyrefly (>=0.33.0,<0.34.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]