[project]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "FjellOverflow",email = "fjelloverflow@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests (>=2.32.5,<3.0.0)", "jupyter (>=1.1.1,<2.0.0)", "pandas (>=2.3.2,<3.0.0)", "plotly (>=6.3.0,<7.0.0)", "fastf1 (>=3.6.1,<4.0.0)"]

[tool.poetry]
packages = [{include = "f1_analysis", from = "src"}]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.sqlfluff.core]
dialect = "sqlite"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.0,<0.14.0)",
    "pyrefly (>=0.33.0,<0.34.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "sqlfluff (>=3.4.2,<4.0.0)"
]